test/core/errors/indexed_offsets_error/zs/shift_operator_in_array_expression_error.zs
package shift_operator_in_array_expression_error;

struct ShiftOperatorInArrayExpressionError
{
    uint32 offsets[];
offsets[@index << 1]:
    string fields[];
};
